# Advanced-Embedded-Systems

./: .gitignore  README.md
BES/GPIO-In/: toggler.sh
BES/GPIO-In/CPP_sysfs/: .#test_simple.cpp  GPIO.cpp  bw_poll_echo  bw_poll_echo.cpp  simple  simple.cpp  test_bw  test_bw.cpp  test_callback  test_callback.cpp  test_syspoll  test_syspoll.cpp
BES/GPIO-In/C_chardev/: LEDecho.c  LEDflash  build
BES/GPIO-In/C_devmem/: LEDecho  LEDecho.c  build
BES/GPIO-In/Shell/: bw_poll_echo.sh
BES/GPIO-In/wiringPi/: build  buttonLED  buttonLED.cpp  buttonLEDdb  clock  fadeLED  fasttoggle  info  pwm  servo
BES/GPIO-Out/CPP_sysfs/: build  simple  simple.cpp  simple_out  simple_out.cpp
BES/GPIO-Out/C_devmem/: GPIOdevmem  GPIOdevmem.c  LEDflash  LEDflash.c  build  ledflash  ledflash.asm  lf.asm
BES/I2C/Compass/: Makefile  compass  main.c
BES/UART/L8-9/: uart  uart.c  uartRPi3.c
BES/UART/async/: async  async.c  build
BES/UART/canonical/: build  canon  canon.c
BES/UART/raw/: build  raw  raw.c
BES/UART/select/: build  select  select.c
Camera/rpi-mmal-demo/: CMakeLists.txt  PCA9685_servo_driver.c  PCA9685_servo_driver.h  buffer_demo.c  buffer_demo_base.c  is_options.c  is_options.h  keyboard.c  keyboard.h  perf.data  video_callback.c  video_callback.h  yuv.c  yuv.h
Project1/: run_cpp  temp.py
Project2/Listing1-3/: build  simple.cpp  test_callback  test_syspoll.cpp
Project2/Listing4/: LEDecho.c  build
Project2/Listing5/: buttonLED.cpp
Project2/Listing6/: gpio_test.c
Speed/Graphics/FB/: fbtest  fbtest.c  fbtest2  fbtest2.c
Speed/Scalar/SG1/: #main.c#  main.c  (+5 more)
(+28 files in other folders)
